src/aws_security_group.tf
# resource "aws_security_group" "web" {
#   name        = "web"
#   description = "Allow public inbound traffic"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     from_port   = 80
#     to_port     = 80
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress {
#     from_port   = 443
#     to_port     = 443
#     protocol    = "tcp"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   ingress {
#     from_port   = -1
#     to_port     = -1
#     protocol    = "icmp"
#     cidr_blocks = [aws_vpc.main.id]
#   }

#   egress {
#     from_port   = 3306
#     to_port     = 3306
#     protocol    = "tcp"
#     cidr_blocks = [var.aws_private_a_cidr_block]
#   }

#   tags = {
#     Name = "Web Server"
#   }
# }

# resource "aws_security_group" "db" {
#   name        = "db"
#   description = "Allow incoming database connections"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     from_port       = 3306
#     to_port         = 3306
#     protocol        = "tcp"
#     security_groups = [aws_security_group.web.id]
#   }

#   ingress {
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = [aws_vpc.main.id]
#   }

#   ingress {
#     from_port   = -1
#     to_port     = -1
#     protocol    = "icmp"
#     cidr_blocks = [aws_vpc.main.id]
#   }

#   egress {
#     from_port   = 80
#     to_port     = 3306
#     protocol    = "80"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   egress {
#     from_port   = 443
#     to_port     = 443
#     protocol    = "80"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = {
#     Name = "Web Server"
#   }
# }
